<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="10dp"
    tools:context=".LoginActivity">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:elevation="4dp"
        app:cardUseCompatPadding="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/lblWelcome"
                    style="bold"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/lblWelcome"
                    android:textColor="@color/strongOne"
                    android:textSize="28dp"></TextView>

                <TextView
                    android:id="@+id/lblSign"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_marginTop="4dp"
                    android:onClick="lblSignUp"
                    android:text="@string/lblSignUp"
                    android:textColor="@color/greenOne"
                    android:textSize="20dp"
                    android:textStyle="bold"></TextView>

            </RelativeLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:fontFamily="Tahoma"
                android:text="@string/lblSignIn"
                android:textStyle="bold"></TextView>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="99dp"
                android:layout_weight="1"
                app:srcCompat="@drawable/login2" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp">

                <EditText
                    android:id="@+id/etUser"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/lightOne"
                    android:hint="@string/txtUserEmail"
                    android:inputType="text"></EditText>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp">

                <EditText
                    android:id="@+id/etPwd"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/lightOne"
                    android:hint="@string/txtPwd1"
                    android:inputType="textPassword"></EditText>
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/tv1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20dp"
                android:layout_marginTop="20px"
                android:background="@color/redOne"
                android:textColor="@color/lightOne">

            </TextView>

            <Button
                android:id="@+id/btnLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="18dp"
                android:backgroundTint="@color/greenOne"
                android:onClick="btnLogin"
                android:text="@string/btnLogin"
                android:textColor="@color/goldenOne"
                android:textSize="20dp"></Button>

        </LinearLayout>


    </androidx.cardview.widget.CardView>

</RelativeLayout>